--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "sonner": "^1.5.0",
-    "sweetalert2": "^11.12.0"
+    "sweetalert2": "^11.12.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
