--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/leaflet": "^1.9.12",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.5",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "sonner": "^1.5.0",
