--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-geosearch": "^4.0.0",
+    "leaflet-routing-machine": "^3.2.12",
+    "nominatim": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
