--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.5",
+    "react-image-gallery": "^1.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
