--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "@react-leaflet/core": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/leaflet": "^1.9.12",
     "axios": "^1.7.2",
